--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -422,7 +422,17 @@
       "display_url": "typing-rust.alanwsmith.com",
       "url": "https://typing-rust.alanwsmith.com/",
       "description": [
-        "The site I'm building to help me learn rust. Also, playing around with an idea I've had for a while to make live tutorial typo detection."
+        "This is my original Rust Notes site where I was going to have a tool to help you type code examples in correctly. I'm punting on it in favor of <a href=\"https://rust-notes.alanwsmith.com/\">Rust Notes</a>."
+      ],
+      "type": "main"
+    },
+
+    {
+      "name": "Rust Notes",
+      "display_url": "rust-notes.alanwsmith.com",
+      "url": "https://rust-notes.alanwsmith.com/",
+      "description": [
+        "My collection of notes for learning Rust. Publishing the entire set as a stand alone site to help me learn better through the process of writing."
       ],
       "type": "main"
     },
