turned off surftech.tv

--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -394,7 +394,7 @@
       "description": [
         "This is a little project I built for myself so that when I've got a\nsome time to watch a tech video during lunch I don't have to worry\nabout finding one. This just plays a random one for me. Still have a\nbunch of features to add to this, but the basic functionality is nice"
       ],
-      "type": "main"
+      "type": "strike"
     },
 
     {
