--- a/scripts/page_builder/config.json
+++ b/scripts/page_builder/config.json
@@ -1,6 +1,14 @@
 {
   "links": [
     { 
+      "name": "867-5309",
+      "display_url": "867-5309.alanwsmith.com",
+      "url": "https://867-5309.alanwsmith.com",
+      "description": [
+        "Quick link for the classic number. Can't belive someone owns 867-5309.com and isn't doing this with it."
+      ]
+    },
+    { 
       "name": "Django Notes And Tutorials",
       "display_url": "django.alanwsmith.com",
       "url": "https://django.alanwsmith.com/",
